@@ -77,14 +77,6 @@ static const char* policies =
     "first | last | bsd | linux | old-linux | windows | win-2003 | vista | "
     "solaris | hpux | hpux10 | irix | macos";
 
-static const char* client_ports =
-    "21 23 25 42 53 80 110 111 135 136 137 139 143 445 513 514 1433 1521 "
-    "2401 3306";
-
-static const char* client_protos =
-    "ftp telnet smtp nameserver dns http pop3 sunrpc dcerpc netbios-ssn imap "
-    "login shell mssql oracle cvs mysql";
-
 static const Parameter stream_tcp_small_params[] =
 {
     { "count", Parameter::PT_INT, "0:2048", "0",
@@ -112,18 +104,6 @@ static const Parameter stream_queue_limit_params[] =
 
 static const Parameter stream_tcp_params[] =
 {
-    { "both_ports", Parameter::PT_BIT_LIST, "65535", nullptr,
-      "reassemble data in both directions for given server ports" },
-
-    { "both_protocols", Parameter::PT_STRING, nullptr, nullptr,
-      "reassemble data in both directions for given services" },
-
-    { "client_ports", Parameter::PT_BIT_LIST, "65535", client_ports,
-      "reassemble data from client to given server ports" },
-
-    { "client_protocols", Parameter::PT_STRING, nullptr, client_protos,
-      "reassemble data from client for given services" },
-
     { "flush_factor", Parameter::PT_INT, "0:", "0",
       "flush upon seeing a drop in segment size after given number of non-decreasing segments" },
 
@@ -147,12 +127,6 @@ static const Parameter stream_tcp_params[] =
 
     { "require_3whs", Parameter::PT_INT, "-1:86400", "-1",
       "don't track midstream sessions after given seconds from start up; -1 tracks all" },
-
-    { "server_ports", Parameter::PT_BIT_LIST, "65535", nullptr,
-      "reassemble data from server for given server ports" },
-
-    { "server_protocols", Parameter::PT_STRING, nullptr, nullptr,
-      "reassemble data from server for given services" },
 
     { "show_rebuilt_packets", Parameter::PT_BOOL, nullptr, "false",
       "enable cmg like output of reassembled packets" },
@@ -206,8 +180,6 @@ StreamTcpModule::StreamTcpModule() :
 
 StreamTcpModule::~StreamTcpModule()
 {
-    for ( auto p : protos )
-        delete p;
 }
 
 const RuleMap* StreamTcpModule::get_rules() const
@@ -273,37 +245,6 @@ StreamTcpConfig* StreamTcpModule::get_data()
     return temp;
 }
 
-ServiceReassembly::ServiceReassembly(string& s, bool cs, bool sc)
-{
-    name = s;
-    c2s = cs;
-    s2c = sc;
-}
-
-void StreamTcpModule::add_protos(Value& v, bool c2s, bool s2c)
-{
-    string tok;
-    v.set_first_token();
-
-    while ( v.get_next_token(tok) )
-        protos.push_back(new ServiceReassembly(tok, c2s, s2c));
-}
-
-const ServiceReassembly* StreamTcpModule::get_proto(unsigned idx)
-{
-    if ( idx < protos.size() )
-        return protos[idx];
-    else
-        return nullptr;
-}
-
-void StreamTcpModule::get_port(
-    Port p, bool& c2s, bool& s2c)
-{
-    c2s = ports_client[p] || ports_both[p];
-    s2c = ports_server[p] || ports_both[p];
-}
-
 bool StreamTcpModule::set(const char*, Value& v, SnortConfig*)
 {
     if ( v.is("count") )
@@ -345,26 +286,6 @@ bool StreamTcpModule::set(const char*, Value& v, SnortConfig*)
     else if ( v.is("session_timeout") )
         config->session_timeout = v.get_long();
 
-    else if ( v.is("client_ports") )
-        v.get_bits(ports_client);
-
-    else if ( v.is("server_ports") )
-        v.get_bits(ports_server);
-
-    else if ( v.is("both_ports") )
-        v.get_bits(ports_both);
-
-    else if ( v.is("client_protocols") )
-    {
-        add_protos(v, true, false);
-        client_protos_set = true;
-    }
-    else if ( v.is("server_protocols") )
-        add_protos(v, false, true);
-
-    else if ( v.is("both_protocols") )
-        add_protos(v, true, true);
-
     else if ( v.is("reassemble_async") )
     {
         if ( v.get_bool() )
@@ -397,40 +318,11 @@ bool StreamTcpModule::begin(const char*, int, SnortConfig*)
 
     config = new StreamTcpConfig;
 
-    ports_client.reset();
-    ports_server.reset();
-    ports_both.reset();
-
-    for ( auto p : protos )
-        delete p;
-
-    protos.clear();
-    client_protos_set = false;
-
-    // set default ports here
-    // if set by user, these are cleared
-    //Value v(client_ports);     // FIXIT need to convert to bit string
-    //v.get_bits(ports_client);  // before converting to bitset
-
     return true;
 }
 
 bool StreamTcpModule::end(const char*, int, SnortConfig*)
 {
-    // these cases are all handled properly
-    // (stream_tcp handles protos == 'all'):
-    //
-    // ports client none -> client_ports = ''
-    // ports client all -> client_ports = '1:65535'
-    // protocol server none -> server_protocols = ''
-    // protocol server all -> server_protocols = 'all'
-
-    // set default protos here if not set by user
-    if ( !client_protos_set )
-    {
-        Value v(client_protos);
-        add_protos(v, true, false);
-    }
     return true;
 }
 
